@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-6.1.6,v 1.1.2.58 2016/04/15 19:37:47 snj Exp $
+# $NetBSD: CHANGES-6.1.6,v 1.1.2.59 2016/04/15 20:16:24 mrg Exp $
 
 A complete list of changes from the NetBSD 6.1.5 release to the NetBSD 6.1.6
 release:
@@ -7511,3 +7511,7 @@ libexec/httpd/tilde-luzah-bozo.c                up to 1.14
 	o -C option supports now CGI scripts only
 	[mrg, ticket #1377]
 
+libexec/httpd/cgi-bozo.c                        1.34
+
+	Fix the build: use %zu instead of %lu for size_t.
+	[mrg, ticket #1377]
